--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
                 android:gravity="center_horizontal"
                 android:checked="true"
                 android:id="@+id/home_id"
-                android:text="病例"
+                android:text="首页"
                 android:button="@null"
                 android:drawableTop="@drawable/home_selector"
                 android:textColor="@color/color_selector"
@@ -32,7 +32,7 @@
             <RadioButton
                 android:gravity="center_horizontal"
                 android:id="@+id/gallery_id"
-                android:text="初步诊断"
+                android:text="求助"
                 android:button="@null"
                 android:drawableTop="@drawable/gallery_selector"
                 android:textColor="@color/color_selector"
@@ -52,7 +52,7 @@
             <RadioButton
                 android:gravity="center_horizontal"
                 android:id="@+id/design_id"
-                android:text="留言"
+                android:text="在线"
                 android:button="@null"
                 android:drawableTop="@drawable/design_selector"
                 android:textColor="@color/color_selector"
@@ -61,13 +61,13 @@
                 android:layout_height="wrap_content" />
         </RadioGroup>
     </LinearLayout>
-    <ImageView
+    <!--<ImageView
         android:layout_margin="10dp"
         android:id="@+id/image_login_id"
         android:clickable="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/unlogin_user_icon"/>
+        android:src="@mipmap/unlogin_user_icon"/>-->
     <!--<ImageView
         android:layout_marginTop="600dp"
         android:layout_marginLeft="200dp"
